data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_865.wast
;; 6. **Indirect Branches with Overflowing Table Indices**:    - Utilize `br_table` instructions with indirect branches within loops that index beyond the provided label vector. The CFG would fail to correctly map these branches, causing unexpected behavior.

(assert_invalid
  (module
    (func $test
      (block (loop (result i32)
        (br_table 0 1 (i32.const 0))  ;; An out-of-bounds label index
        (i32.const 0)
      ))
    )
  )
  "type mismatch"
)